--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://use.fontawesome.com/83913f37fb.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     <style media="screen">
-      @media only screen and (max-device-width : 1080px) {
+      @media only screen and (min-device-width : 1080px) {
         div.container{
             width: 85%;
             height: 34rem;
