--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
 
         <div class="row">
           <div class="col-lg-12">
-<!--             <button type="submit" class="btn btn-lg btn-block mt-4 mx-auto" name="button">Submit<i class="fa fa-long-arrow-right fa-fw ml-3"></i></button> -->
-            <button type="reset" class="btn btn-lg btn-block mt-4 mx-auto" name="button">Submit<i class="fa fa-long-arrow-right fa-fw ml-3"></i></button>
+            <button type="submit" class="btn btn-lg btn-block mt-4 mx-auto" name="button">Submit<i class="fa fa-long-arrow-right fa-fw ml-3"></i></button>
           </div>
         </div>
       </form>
